# advanced-rag-engineering

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agents/: adaptive_router.py  crag.py
agents/tools/: code_search.py  vector_search.py  web_search.py
app/: config.py  document_store.py  main.py  models.py  streamlit_app.py
eval/: bad_embedder.py  bad_generator.py  bad_generator_oos.py  bad_retriever.py  baseline.py  common.py  session1_handwritten.py
eval/datasets/: bench_paraphrases.json  synthetic_testset_raw.csv
pipeline/: hybrid_chunker.py  indexer.py  indexing_pipeline.py  ingest.py
prompts/: __init__.py  grading.py  templates.py
retrieval/: filters.py  rag_pipeline.py  reranker.py  retrieval_pipeline.py
routes/: chat.py  health.py  query.py  search.py
scripts/: bench_latency.py  bench_results.csv  generate_testset.py  index_documents.py  index_documents_384.py  test_chunking.py  test_retrieval.py
security/: content_filter.py  input_guard.py  output_guard.py
services/: document_grader.py  query_decomposer.py  rag_pipeline.py  semantic_cache.py
