[project]
name = "advanced-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "haystack-ai>=2.28.0",
    "markdown-it-py>=4.0.0",
    "mdit-plain>=1.0.1",
    "openai>=2.33.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "qdrant-client>=1.17.1",
    "qdrant-haystack>=10.3.0",
    "redis>=7.4.0",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
    "uvicorn>=0.46.0",
]
